# database-stream-processor-compiler

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md
crates/ddlog-diagnostics/: Cargo.toml
crates/ddlog-diagnostics/src/: diagnostic.rs  file_cache.rs  file_id.rs  interner.rs  lib.rs  span.rs
crates/ddlog-driver/: Cargo.toml
crates/ddlog-driver/src/: lib.rs  main.rs
crates/ddlog-lsp/: Cargo.toml
crates/ddlog-lsp/src/: backend.rs  database.rs  lib.rs  session.rs
crates/ddlog-lsp/src/backend/: language_server.rs  logging.rs  mod.rs
crates/ddlog-lsp/src/database/: mod.rs  queries.rs
crates/ddlog-lsp/src/providers/: mod.rs  utils.rs
crates/ddlog-lsp/src/providers/document_symbols/: database.rs  mod.rs
crates/ddlog-lsp/src/providers/hir/: items.rs  mod.rs
crates/ddlog-lsp/src/providers/semantic_tokens/: builder.rs  highlighter.rs  mod.rs  tokens.rs
crates/ddlog-lsp/src/providers/symbols/: declarations.rs  mod.rs
crates/ddlog-syntax/: Cargo.toml  ddlog.ungram
crates/ddlog-syntax/src/: hasher.rs  interner.rs  lexer.rs  lib.rs  macros.rs  parser_cache.rs  queries.rs  span.rs  syntax.rs  token_set.rs  visitor.rs
crates/ddlog-syntax/src/ast/: ast_node.rs  ast_token.rs  generated_ext.rs  mod.rs  node.rs  support.rs  visitor.rs
crates/ddlog-syntax/src/parser/: event.rs  expr.rs  item.rs  mod.rs  precedence.rs  sink.rs  source.rs  stmt.rs  types.rs  utils.rs
crates/ddlog-syntax/src/parser/item/: clause.rs  function.rs  mod.rs  relation.rs  structs.rs
crates/ddlog-syntax/src/parser/tests/: expr.rs  mod.rs
crates/ddlog-syntax/src/syntax_kind/: constants.rs  generated.rs  mod.rs  tests.rs  token_macro.rs
crates/ddlog-syntax/src/validation/: extra_commas.rs  generic_arg_count.rs  mod.rs  modifiers.rs  struct_field_count.rs
crates/ddlog-syntax/src/validation/tests/: max_fn_generics.expected  max_struct_fields.expected  max_struct_generics.expected  too_many_fn_generics.expected  too_many_struct_fields.expected  too_many_struct_generics.expected
crates/ddlog-syntax/tests/: filetests.rs
crates/ddlog-syntax/tests/inline/fail/: double_comma_function_arg.dl  double_comma_function_arg.rast  double_comma_relation_arg.dl  double_comma_relation_arg.rast  double_extern_function.rast  extern_relation.dl  extern_relation.rast  function_arg_without_comma.dl  function_arg_without_comma.rast  input_function.rast  output_function.dl  output_function.rast  relation_arg_without_comma.dl  relation_arg_without_comma.rast  relation_with_input_and_output.rast  unclosed_block.dl  unclosed_block.rast  unclosed_paren.dl  unclosed_paren.rast  unclosed_relation_args.dl  unclosed_relation_args.rast
crates/ddlog-syntax/tests/inline/pass/: basic_relation.dl  basic_relation.rast  binary_number.dl  binary_number.rast  block_exprs.dl  block_exprs.rast  bool_false.dl  bool_false.rast  bool_true.dl  bool_true.rast  boolean_not.dl  boolean_not.rast  decimal_number.dl  decimal_number.rast  extern_function.dl  extern_function.rast  function_args.dl  function_args.rast  function_definitions.dl  function_definitions.rast  function_ret_ty.dl  function_ret_ty.rast  hex_number.dl  hex_number.rast  indiscriminantly_modify.dl  indiscriminantly_modify.rast  integers.rast  lowercase_relation.dl  lowercase_relation.rast  negation.dl  negation.rast  parenthesised.dl  parenthesised.rast  relation_columns.dl  relation_columns.rast  relation_with_multiple_modifiers.dl  relation_with_multiple_modifiers.rast  streams_and_sets.dl  streams_and_sets.rast  underline_var.dl  (+3 more)
crates/ddlog-syntax/tests/parse/fail/: missing_tuple_comma.dl  missing_tuple_comma.rast  unclosed_block.dl  unclosed_block.rast  unclosed_paren.dl  unclosed_paren.rast  unclosed_relation_args.dl  unclosed_relation_args.rast
crates/ddlog-syntax/tests/parse/pass/: argument_attributes.dl  argument_attributes.rast  assign.dl  assign.rast  assign_exotic.dl  assign_exotic.rast  assign_rvalue.dl  assign_rvalue.rast  attribute.dl  attribute.rast  attributes.dl  attributes.rast  basic_relation.dl  basic_relation.rast  binary_number.dl  binary_number.rast  binary_ops.dl  binary_ops.rast  block_closure.dl  block_closure.rast  block_comments.dl  block_comments.rast  block_exprs.dl  block_exprs.rast  bool_false.dl  bool_false.rast  bool_true.dl  bool_true.rast  boolean_not.dl  boolean_not.rast  break.dl  break.rast  break_chain.dl  break_chain.rast  break_expr.dl  break_expr.rast  chained_clauses.dl  chained_clauses.rast  chained_field_access.dl  chained_field_access.rast  (+126 more)
crates/ddlog-syntax/tests/validation/fail/: double_extern_function.dl  double_extern_function.rast  extern_relation.dl  extern_relation.rast  input_function.dl  input_function.rast  (+16 more)
(+51 files in other folders)
