[package]
name = "ddlog-diagnostics"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ropey = "1.3.1"
ariadne = "0.1.2"
triomphe = "0.1.3"

    [dependencies.xxhash-rust]
    version = "0.8.2"
    features = ["xxh3", "const_xxh3"]

    [dependencies.lasso]
    version = "0.5.1"
    features = ["multi-threaded", "inline-more"]
