[package]
name = "ddlog-driver"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ddlog-repl"
path = "src/bin/ddlog_repl.rs"

[dependencies]
lspower = "1.1.0"
tracing = "0.1.26"
triomphe = "0.1.3"
tracing-subscriber = "0.2.20"
ddlog-lsp = { path = "../ddlog-lsp" }
ddlog-syntax = { path = "../ddlog-syntax" }
tokio = { version = "1.10.1", features = ["full"] }
ddlog-diagnostics = { path = "../ddlog-diagnostics" }
