[package]
name = "ddlog-lsp"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ropey = "1.3.1"
# FIXME: Completely decouple cstree from everything but ddlog-syntax
cstree = "0.7.0"
anyhow = "1.0.43"
dashmap = "4.0.2"
lspower = "1.1.0"
triomphe = "0.1.3"
lsp-text = "0.0.11"
serde_json = "1.0.67"
ddlog-syntax = { path = "../ddlog-syntax" }
ddlog-diagnostics = { path = "../ddlog-diagnostics" }
