[package]
name = "ddlog-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ropey = "1.3.1"
salsa = "0.16.1"
# FIXME: Completely decouple cstree from everything but ddlog-syntax
cstree = "0.11.0"
anyhow = "1.0.43"
dashmap = "4.0.2"
lspower = "1.1.0"
tracing = "0.1.26"
lsp-text = "0.1.0"
serde_json = "1.0.67"
ddlog-utils = { path = "../ddlog-utils" }
ddlog-syntax = { path = "../ddlog-syntax" }
tokio = { version = "1.11.0", features = ["rt"] }
ddlog-diagnostics = { path = "../ddlog-diagnostics" }
