[package]
name = "ddlog-syntax"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
logos = "0.12.0"
cstree = "0.8.1"
tracing = "0.1.26"
triomphe = "0.1.3"
ddlog-diagnostics = { path = "../ddlog-diagnostics" }

[dev-dependencies]
walkdir = "2.3.2"
once_cell = "1.8.0"
expect-test = "1.0.1"
tracing-subscriber = "0.2.20"
