[package]
name = "ddlog-syntax"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[test]]
name = "filetests"
path = "tests/filetests.rs"
harness = false

[dependencies]
logos = "0.12.0"
salsa = "0.16.1"
cstree = "0.11.0"
tracing = "0.1.26"
parking_lot = "0.12.0"
ddlog-db = { path = "../ddlog-db" }
ddlog-utils = { path = "../ddlog-utils" }
ddlog-diagnostics = { path = "../ddlog-diagnostics" }

[dev-dependencies]
walkdir = "2.3.2"
once_cell = "1.8.0"
expect-test = "1.0.1"
libtest-mimic = "0.4.0"
tracing-subscriber = "0.3.11"
